Add docs to parsing context